# stateplane

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  Makefile  README.md  pyproject.toml  readme.md  setup.cfg  setup.py  srs.csv  stateplane.geojson  tox.ini
.github/workflows/: main.yml  release.yml
src/stateplane/: __init__.py  __main__.py  countyfp.csv  dicts.py  stateplane.py
stateplane/: __init__.py  cli.py  data.py  dicts.py  stateplane.py
stateplane/data/: countyfp.csv  stateplane.dbf  stateplane.geojson  stateplane.shp  stateplane.shx
tests/: __init__.py  base.py  test_stateplane.py  test_version.py
