[metadata]
name = stateplane
version = attr: stateplane.__version__
description='Convert between state plane projections and long/lat',
long_description = file: README.md
long_description_content_type = text/markdown
keywords = gis, usa, projection
author = Neil Freeman
author_email = contact@fakeisthenewreal.org
url = https://github.com/fitnr/stateplane
license = GPLv3
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: Unix
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
python_requires = >= 3.7
zip_safe = True
include_package_data = True
packages =
    stateplane
package_dir =
    =src
install_requires =
    pyproj>=2.4.2
    shapely
    GDAL
    importlib_resources; python_version < "3.9"

[options.package_data]
stateplane = *.zip, *.csv, *.geojson

[options.entry_points]
console_scripts =
    stateplane = stateplane.cli:main
